--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
 	<script src="js/lightbox.js"></script>
 	<script src="js/custom.js"></script>
 	<style>
-		body {font-family: 'Alegreya Sans', sans-serif; font-size: 18px; font-weight:300; color: #fff;}
+		body {font: 300 18px 'Alegreya Sans'; color: #fff;}
 		strong {font-weight:500;}
-		#inicio {height: 100vh; display: flex; align-items: center;}
-		#inicio {background: #081153 url('../img/centroconvenciones.jpg') bottom center no-repeat; background-size: contain;display: flex; flex-direction: column; align-items: center; justify-content: center;}
-		#inicio img {width: 100%; max-width:400px;}
-		#inicio h2 {font-weight:300; font-size: 38px; margin: 10px;}
-		#inicio p {font-size: 40px; font-weight: 500; letter-spacing: 0.5px; line-height: 50px; color: #ff9600; text-align: center;}
-		#mainSocial a {color: #FFF; text-decoration: none; font-size: 50px; margin: 0 15px;}
+		#inicio {height: 100vh; background: #0078b5 url('../img/centro-convenciones.jpg') bottom center no-repeat; background-size: contain;}
+		#logoSec {display: flex; flex-direction: column; align-items: center; justify-content: center;}
+		#logoSec img {width: 100%; max-width:385px;}
+		#inicio h2 {font-weight:300; font-size: 30px; margin: 20px;}
+		#inicio h3 {font-weight:300;}
+		#inicio p {font: 500 30px/40px "Alegreya Sans"; letter-spacing: 0.5px; color: #fff; text-align: center;}
+		#store {display: block; background-image: linear-gradient(#ff9600, #e25a00); border:1px solid #e08400; border-radius: 10px; text-align: center; color: #FFF; text-decoration: none; font: 400 24px/45px "Alegreya Sans"; width: 175px; margin: 20px 0 45px; }
+		#mainSocial a {color: #FFF; text-decoration: none; font-size: 35px; margin: 0 10px;}
 		#mainSocial a:hover {color: rgb(182, 232, 241);}
-		#inicio p, #mainSocial a, #inicio h3 {text-shadow:0px 3px 6px #081153, 3px 0px 6px #081153;}
-		#mainCredits {display: block; background: rgba(0,0,0, 0.7); width: 100%; text-align: center; position: absolute; bottom: 0%; line-height: 35px;}
+		#inicio p, #mainSocial a, #inicio h3 {text-shadow:1px 1px 0px #081153/*, 3px 0px 6px #081153*/;}
+		#mainCredits {display: block; background: #044c71; width: 100%; text-align: center; position: absolute; bottom: 0%; line-height: 35px;}
 		#mainCredits a {color: #ffff00; text-decoration: underline;}
 
 		#chum {background: url('../img/background.png') center top no-repeat; height: 965px;}
@@ -170,16 +172,26 @@
 	</nav>
 	<div id="content-wrapper">
 		<section id="inicio">
-			<img id="conxLog" src="/img/conx-logo.png" alt="convención anime y comic costa rica">
-			<h2>Convención de Cultura Geek</h2>
-			<p>Domingo 5 de Mayo - 10am<br>Centro de Convenciones de Costa Rica<br>San José, Costa Rica</p>
-			<div id="mainSocial">
-				<a href="#" class="fab fa-facebook-square"></a>
-				<a href="#" class="fab fa-instagram"></a>
-				<a href="#" class="fab fa-twitter"></a>
-				<a href="#" class="fab fa-youtube"></a>
+			<nav id="indexNav">
+				<a href="#">Invitados</a>
+				<a href="#">Actividades</a>
+				<a href="#">Stands</a>
+				<a href="#" id="upNav">Boletos</a>
+				<a href="#">Contacto</a>
+			</nav>
+			<div id="logoSec">
+				<img id="conxLog" src="/img/conx-logo.png" alt="convención anime y comic costa rica">
+				<h2>CONVENCIÓN DE CULTURA GEEK</h2>
+				<p>Domingo 5 de Mayo - 10am<br>Centro de Convenciones de Costa Rica<br>Entrada General: &cent;10,000 colones</p>
+				<a href="#" id="store">BOLETOS</a>
+				<div id="mainSocial">
+					<a href="#" class="fab fa-facebook-square"></a>
+					<a href="#" class="fab fa-instagram"></a>
+					<a href="#" class="fab fa-twitter"></a>
+					<a href="#" class="fab fa-youtube"></a>
+				</div>
+				<h3>¡Conectate a la experiencia y cuéntale a tus amigos!</h3>
 			</div>
-			<h3>¡Conectate a la experiencia y cuéntale a tus amigos!</h3>
 			<div id="mainCredits">Con-X: Convención Geek y WCS Costa Rica son propiedad de <a href="#">Plus Ultra!</a></div>
 		</section>
 		<div class="scrollContent">
@@ -209,7 +221,7 @@
 						.add([
 							TweenMax.fromTo("#chumlee", 0.4, {left:"100%", opacity:0}, {left:"15%", opacity:1}),
 							TweenMax.to("#carroviejo", 1, {left: "100%", delay:0.4}),
-							TweenMax.fromTo("#nav", 10, {opacity: 0}, {opacity: 1})
+							TweenMax.fromTo("#nav", 1, {opacity: 0}, {opacity: 1, delay:0.4})
 							]);
 
 					var scene = new ScrollMagic.Scene({triggerElement: "#ferris", duration: 1200})
