--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,16 +20,21 @@
 	<style>
 		body {font: 300 18px 'Alegreya Sans'; color: #fff;}
 		strong {font-weight:500;}
-		#inicio {height: 100vh; background: #0078b5 url('../img/centro-convenciones.jpg') bottom center no-repeat; background-size: contain;}
-		#logoSec {display: flex; flex-direction: column; align-items: center; justify-content: center;}
-		#logoSec img {width: 100%; max-width:385px;}
-		#inicio h2 {font-weight:300; font-size: 30px; margin: 20px;}
+		#inicio {height: 100vh; background: #0078b5 url('../img/convencion-comic.jpg') 0px 110px no-repeat; background-size: contain;}
+		#logoSec {display: flex; flex-direction: column; align-items: center; justify-content: center; width: 460px; position: relative; top: calc(50% + -43vh); left: calc(50% + -40vw);}
+		#logoSec img {width: 100%; max-width:350px;}
+		#inicio h2 {font-weight:300; font-size: 27px; margin: 20px;}
 		#inicio h3 {font-weight:300;}
-		#inicio p {font: 500 30px/40px "Alegreya Sans"; letter-spacing: 0.5px; color: #fff; text-align: center;}
+		#inicio p {font: 500 25px/35px "Alegreya Sans"; letter-spacing: 0.5px; color: #fff; text-align: center;}
+		#indexNav {display: block; text-align: right; width: 80%; margin: 0 auto;}
+		#indexNav a {color: #FFF; text-decoration: none; margin: 0px 50px 0 0; font: 500 18px/100px 'Alegreya Sans';}
+		#indexNav a:hover {color: #ffb977;}
+		#indexNav .upNav {color: #f4f260;}
+
 		#store {display: block; background-image: linear-gradient(#ff9600, #e25a00); border:1px solid #e08400; border-radius: 10px; text-align: center; color: #FFF; text-decoration: none; font: 400 24px/45px "Alegreya Sans"; width: 175px; margin: 20px 0 45px; }
 		#mainSocial a {color: #FFF; text-decoration: none; font-size: 35px; margin: 0 10px;}
 		#mainSocial a:hover {color: rgb(182, 232, 241);}
-		#inicio p, #mainSocial a, #inicio h3 {text-shadow:1px 1px 0px #081153/*, 3px 0px 6px #081153*/;}
+		#inicio p, #mainSocial a, #inicio h3 {text-shadow:2px 2px 0px rgba(0, 0, 0, 0.2)/*, 3px 0px 6px #081153*/;}
 		#mainCredits {display: block; background: #044c71; width: 100%; text-align: center; position: absolute; bottom: 0%; line-height: 35px;}
 		#mainCredits a {color: #ffff00; text-decoration: underline;}
 
@@ -118,8 +123,7 @@
 		.socialLink a {color: #2bbae8; text-decoration: none; margin: 0 10px; font-size: 24px;}
 		.socialLink a:hover {color: #e1f7ff;}
 
-
-		#nav {position: fixed; width: 100%; z-index: 999; opacity: 0;}
+		#nav {display:none; position: fixed; width: 100%; z-index: 999; opacity: 0; top: 0;}
 		#nav ul {display: none; width: 100%; list-style: none; margin: 0px; padding: 0px;}
 		#nav ul li a {display: block; padding: 1em; background: #0078B5; color: white; text-align:center; text-decoration: underline; font-weight:500; }
 		#nav ul li a:hover {background: rgb(0, 83, 124);}
@@ -143,40 +147,18 @@
 			#nav #lg a {padding: 4px 0 0;}
 		}
 	</style>
+<script>
+	var controller = new ScrollMagic.Controller();
+</script>	
 </head>
 <body>
-	<script>
-		// init controller
-		var controller = new ScrollMagic.Controller();
-	</script>	
-	<nav id="nav">
-		<input class="trigger" type="checkbox" id="mainNavButton">
-		<label for="mainNavButton" onclick>Menu</label>
-		<ul>
-			<li id="lg"><a href="#"><img src="/img/convencion-logo.png" alt="convencion anime comic"></a></li>
-			<li><a href="#">Inicio</a></li>
-			<li><a href="#">Invitados</a>
-				<ul>
-					<li><a href="#">Austin Chumlee</a></li>
-					<li><a href="#">Gerardo Reyero</a></li>
-					<li><a href="#">Alina Nicte</a></li>
-					<li><a href="#">Cosplayer</a></li>
-					<li><a href="#">Ilustradores</a></li>					
-				</ul>
-			</li>
-			<li><a href="#">Actividades</a></li>
-			<li><a href="#">Stands</a></li>
-			<li><a href="#" id="up">Boletos</a></li>
-			<li><a href="#">Contacto</a></li>
-		</ul>
-	</nav>
 	<div id="content-wrapper">
-		<section id="inicio">
+		<div id="inicio">
 			<nav id="indexNav">
 				<a href="#">Invitados</a>
 				<a href="#">Actividades</a>
 				<a href="#">Stands</a>
-				<a href="#" id="upNav">Boletos</a>
+				<a href="#" class="upNav">Boletos</a>
 				<a href="#">Contacto</a>
 			</nav>
 			<div id="logoSec">
@@ -193,9 +175,32 @@
 				<h3>¡Conectate a la experiencia y cuéntale a tus amigos!</h3>
 			</div>
 			<div id="mainCredits">Con-X: Convención Geek y WCS Costa Rica son propiedad de <a href="#">Plus Ultra!</a></div>
-		</section>
+		</div>
+
+
 		<div class="scrollContent">
-			<div id="chum" class="scene">
+			<nav id="nav">
+				<input class="trigger" type="checkbox" id="mainNavButton">
+				<label for="mainNavButton" onclick>Menu</label>
+				<ul>
+					<li id="lg"><a href="#"><img src="/img/convencion-logo.png" alt="convencion anime comic"></a></li>
+					<li><a href="#">Inicio</a></li>
+					<li><a href="#">Invitados</a>
+						<ul>
+							<li><a href="#">Austin Chumlee</a></li>
+							<li><a href="#">Gerardo Reyero</a></li>
+							<li><a href="#">Alina Nicte</a></li>
+							<li><a href="#">Cosplayer</a></li>
+							<li><a href="#">Ilustradores</a></li>					
+						</ul>
+					</li>
+					<li><a href="#">Actividades</a></li>
+					<li><a href="#">Stands</a></li>
+					<li><a href="#" class="upNav">Boletos</a></li>
+					<li><a href="#">Contacto</a></li>
+				</ul>
+			</nav>
+			<div id="chum" class="scene">					
 				<div id="ferris">
 					<div id="tower"></div>
 					<div id="rueda"></div>
@@ -221,11 +226,12 @@
 						.add([
 							TweenMax.fromTo("#chumlee", 0.4, {left:"100%", opacity:0}, {left:"15%", opacity:1}),
 							TweenMax.to("#carroviejo", 1, {left: "100%", delay:0.4}),
-							TweenMax.fromTo("#nav", 1, {opacity: 0}, {opacity: 1, delay:0.4})
+							TweenMax.fromTo("#nav", 1, {opacity: 0, display:"none"}, {opacity: 1, display:"block"})
 							]);
 
 					var scene = new ScrollMagic.Scene({triggerElement: "#ferris", duration: 1200})
 						.setTween(reveal)
+//						.setPin("#nav")
 //						.reverse (false)
 						.addTo(controller);
 				</script>					
