--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		#cosplay h2 {margin-top: 75px;}
 		#cosplay h2:first-of-type{margin-top: 0px;}
 		#cosplay, #graficos {padding-top:80px; border-top:2px solid #FFF;  }
-		#graficos {background:#a4ddf3;}
+		#graficos {background:#a4ddf3 url('../img/museum.jpg') center fixed no-repeat; background-size:cover; }
 
 		@keyframes rotate {from{transform: rotate(0deg);} to{transform: rotate(360deg);}}
 		@keyframes leftToRight {0%{left: 100%;} 40%{left: -20%;}}
