--- a/home.html
+++ b/home.html
@@ -229,6 +229,23 @@
 			.ticket div {height: initial;}
 		}
 	</style>
+	<!-- Facebook Pixel Code -->
+	<script>
+		!function(f,b,e,v,n,t,s)
+		{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+		n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+		if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+		n.queue=[];t=b.createElement(e);t.async=!0;
+		t.src=v;s=b.getElementsByTagName(e)[0];
+		s.parentNode.insertBefore(t,s)}(window, document,'script',
+		'https://connect.facebook.net/en_US/fbevents.js');
+		fbq('init', '794677347572234');
+		fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+		src="https://www.facebook.com/tr?id=794677347572234&ev=PageView&noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
 	<script>
 		var controller = new ScrollMagic.Controller();
 	</script>	
@@ -401,6 +418,8 @@
 					</div>
 				</div>
 				<div id="patron">
+					<img src="/img/logos/cccr.jpg" alt="cccr">
+					<img src="/img/logos/masco.jpg" alt="masco">					
 					<img src="/img/logos/cosplaner.jpg" alt="cosplanner">
 					<img src="/img/logos/nissimoo.jpg" alt="nissimoo">
 					<img src="/img/logos/moo.jpg" alt="moo gaming">
