--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 					<a href="https://www.youtube.com/channel/UCUMB1CzczAPzX72L1lP2BVw" class="fab fa-youtube"></a>
 				</div>
 			</div>
-			<div id="mainCredits">Con-X: Convención Geek y WCS Costa Rica son propiedad de <a href="https://plus-ultra.io" target="_blanck" class="upNav">Plus Ultra!</a></div>
+			<div id="mainCredits">Con-X: Convención Geek y WCS Costa Rica son propiedad de <a href="https://plus-ultra.io" target="_blank" class="upNav">Plus Ultra!</a></div>
 		</div>
 		<div class="scrollContent">
 			<div id="chum" class="scene">					
@@ -547,7 +547,7 @@
 							<p><strong>Incluye:</strong><br>+ Set de 3 postales exclusivas, diseñadas por reconocidos artitas e ilustradores costarricenses con reconocimiento internacional.<br> Todas son: <b>100% coleccionables</b>.</p>
 							<p class="free">Cada pack incluye 1 acceso a Con-X: Convención Geek.</p>
 						</div>
-						<a href="https://plus-ultra.io/producto/x-pack/" target="_blank" class="goplus" target="_blank">COMPRAR</a>
+						<a href="https://plus-ultra.io/producto/x-pack/" target="_blank" class="goplus">COMPRAR</a>
 					</div>
 					<div class="ticket vip">
 						<a href="https://plus-ultra.io/producto/geek-pack-xl/" target="_blank" class="ticketImg"><img src="/img/x.png" alt="entrada general"><b>GEEK PACK XL</b></a>
